<resources>
    <string name="app_name">Sleep Easy</string>
    <string name="update">Updating&#8230;</string>
    <string name="deactivated">Deactivated</string>
    <string name="activated">Activated</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="pause_alert">Pause Alert</string>
    <string name="activitymain_title">My Phone should be charging between</string>
    <string name="activitymain_starttime">Start Time</string>
    <string name="activitymain_endtime">End Time</string>
    <string name="activitymain_rinnger">Alarm Alert</string>
    <string name="activitymain_flasher">Screen Alert</string>
    <string name="daysoftheweektitle">Nights to alert me</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>


    <string-array name="time_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>


    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>


</resources>
