<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    tools:context="au.com.patricklabes.sleepeasy.MainActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"

        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/title_Times_to_check_between"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activitymain_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:layout_editor_absoluteX="262dp"
                tools:layout_editor_absoluteY="228dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/title_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="75dp"
                android:text="@string/activitymain_starttime"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:layout_editor_absoluteX="262dp"
                tools:layout_editor_absoluteY="228dp" />


            <Spinner
                android:id="@+id/spinnerStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/time_array"
                android:minWidth="75dp"
                android:prompt="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/title_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="75dp"
                android:text="@string/activitymain_endtime"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Spinner
                android:id="@+id/spinnerEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/time_array"
                android:minWidth="75dp"
                android:prompt="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Switch
                android:id="@+id/switch_ringer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activitymain_rinnger" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Switch
                android:id="@+id/switch_flash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activitymain_flasher" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/btn_activate"
                style="@style/Widget.AppCompat.Button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/activate"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
